[gd_scene load_steps=5 format=2]

[ext_resource path="res://characters/bus/buth.dae" type="PackedScene" id=1]
[ext_resource path="res://characters/bus/realbus.gd" type="Script" id=2]
[ext_resource path="res://characters/bus/Bus_Textures_All.material" type="Material" id=3]
[ext_resource path="res://characters/bus/wheel.tscn" type="PackedScene" id=4]

[node name="Scene Root" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Cube" parent="." index="0"]
material/0 = ExtResource( 3 )

[node name="Wheel" parent="." index="2" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03091, 0.407166, 1.01497 )

[node name="Wheel3" parent="." index="3" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.03091, 0.407166, -5.00675 )

[node name="Wheel2" parent="." index="4" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.98067, 0.407166, 1.00344 )

[node name="Wheel4" parent="." index="5" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.98067, 0.407166, -5.02024 )

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 0.25
autostart = true
